--- a/src/app/composants/menu/menu.component.html
+++ b/src/app/composants/menu/menu.component.html
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink='/acceuil' routerLinkActive=active [routerLinkActiveOptions]="{ exact: true }"> A propos de moi</a>
+        <a class="nav-item nav-link" routerLink='/' routerLinkActive=active [routerLinkActiveOptions]="{ exact: true }"> A propos de moi</a>
         <li routerLinkActive=active>
         <a class="nav-item nav-link" routerLink='/experience'>Experience</a>
         </li>
